# STUDYBUD

./: .env.example  .gitignore  README.md  database_queries.sql  file_hashes.db  gemini.py  hash_check.py  main.py  pyproject.toml  stringextractor.py  video_storage.py  youtube.py
tests/: test_hash_check.py  test_stringextractor.py
